# circuitscope

./: .gitignore  README.md  hi.py  pyproject.toml
circuitscope/: __init__.py  acdc.py  autospec.py  behaviors.py  benchmark.py  cli.py  eap.py  feature_circuit.py  graph.py  labeling.py  metrics.py  model.py  patching.py  pipeline.py  sae_bank.py  viz.py
docs/: explainer.html
examples/: demo.py
tests/: test_autospec.py  test_benchmark.py  test_feature_circuit.py  test_graph.py  test_metrics.py  test_pipeline_smoke.py
